--- a/LapTrinhQuanLy/LapTrinhQuanLy.csproj
+++ b/LapTrinhQuanLy/LapTrinhQuanLy.csproj
@@ -128,10 +128,15 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Areas\Admins\AdminsAreaRegistration.cs" />
+    <Compile Include="Areas\Admins\Controllers\HomeAdminController.cs" />
+    <Compile Include="Areas\Employees\Controllers\HomeEmpController.cs" />
+    <Compile Include="Areas\Employees\EmployeesAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PeopleController.cs" />
     <Compile Include="Controllers\PersonnewController.cs" />
+    <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -143,12 +148,26 @@
     <Compile Include="Migrations\202110010754290_test.Designer.cs">
       <DependentUpon>202110010754290_test.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202110050558372_Role.cs" />
+    <Compile Include="Migrations\202110050558372_Role.Designer.cs">
+      <DependentUpon>202110050558372_Role.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202110050945356_add_column_account.cs" />
+    <Compile Include="Migrations\202110050945356_add_column_account.Designer.cs">
+      <DependentUpon>202110050945356_add_column_account.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202110061251266_update_table.cs" />
+    <Compile Include="Migrations\202110061251266_update_table.Designer.cs">
+      <DependentUpon>202110061251266_update_table.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountModel.cs" />
     <Compile Include="Models\AutoKeyboat.cs" />
     <Compile Include="Models\Encrytion.cs" />
     <Compile Include="Models\LTQLDbContext.cs" />
     <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\Role.cs" />
+    <Compile Include="Models\UsersRoleProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -167,6 +186,10 @@
     <Content Include="Scripts\ckeditor\ckeditor.asp" />
     <Content Include="Scripts\ckeditor\ckeditor.js" />
     <Content Include="Scripts\ckeditor\ckeditor.pack" />
+    <Content Include="Areas\Admins\Views\web.config" />
+    <Content Include="Areas\Employees\Views\web.config" />
+    <Content Include="Areas\Admins\Views\HomeAdmin\Index.cshtml" />
+    <Content Include="Areas\Employees\Views\HomeEmp\Index.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\ckeditor\ckeditor.php" />
     <Content Include="Scripts\ckeditor\ckeditor_basic.js" />
@@ -544,11 +567,20 @@
     <Content Include="Views\Personnew\Index.cshtml" />
     <Content Include="Views\Personnew\Delete.cshtml" />
     <Content Include="Views\Personnew\Edit.cshtml" />
-    <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Roles\Create.cshtml" />
+    <Content Include="Views\Roles\Delete.cshtml" />
+    <Content Include="Views\Roles\Details.cshtml" />
+    <Content Include="Views\Roles\Edit.cshtml" />
+    <Content Include="Views\Roles\Index.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\Admins\Data\" />
+    <Folder Include="Areas\Admins\Views\Shared\" />
+    <Folder Include="Areas\Employees\Data\" />
+    <Folder Include="Areas\Employees\Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -569,6 +601,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202110010754290_test.resx">
       <DependentUpon>202110010754290_test.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110050558372_Role.resx">
+      <DependentUpon>202110050558372_Role.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110050945356_add_column_account.resx">
+      <DependentUpon>202110050945356_add_column_account.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110061251266_update_table.resx">
+      <DependentUpon>202110061251266_update_table.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
