--- a/LapTrinhQuanLy/Web.config
+++ b/LapTrinhQuanLy/Web.config
@@ -15,6 +15,15 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+	  <authentication mode="Forms">
+		  <forms loginUrl="~/Account/Login"></forms>
+	  </authentication>
+	  <roleManager defaultProvider="usersRoleProvider" enabled="true">
+		  <providers>
+			  <clear/>
+			  <add name="usersRoleProvider" type="LapTrinhQuanLy.Models.UsersRoleProvider"/>
+		  </providers>
+	  </roleManager>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
